# video_player

./: .gitignore  CMakeLists.txt  README.md
include/: VideoAdjuster.hpp
src/: CVtest.cpp  VideoAdjuster.cpp
